# remove_accsess_to_drive

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
